<resources>
    <string name="app_name">Shared Calender</string>
    <string name="button">Pick Date</string>
    <string name="date">Date</string>
    <string name="add_event">ADD EVENT</string>
    <string name="edu">Educational</string>
    <string name="dandm">Log Out</string>
    <string name="litry">Literary</string>
    <string name="aandd">Art and Drama</string>
    <string name="textview">TextView</string>
    <string name="so">Sign Out</string>
    <string name="events">EVENTS</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="pick_time">Pick Time</string>
    <string name="event_name">Event Name</string>
    <string name="club_name">Club Name</string>
    <string name="event_participators">Event Participators</string>
    <string name="submit">SUBMIT</string>
    <string name="fb_app_id" translatable="false">352880178595791</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb352880178595791</string>
 <string name="facebook_app_id" translatable="false">352880178595791</string>
 <string name="facebook_application_id" translatable="false">352880178595791</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb352880178595791</string>
    <string name="post">POST</string>
    <string name="cyberlabs">CYBERLABS</string>
    <string name="venue">Venue</string>
    <string name="android_workshop">Android Workshop</string>
    <string name="everyone">Everyone</string>
    <string name="date_and_time">Date and Time</string>
    <string name="lo">Log Out</string>

</resources>
