<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/list_layout">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="111dp"
                android:layout_height="87dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/post"
                android:padding="4dp" />

            <TextView
                android:id="@+id/textViewClubName"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="0.5dp"
                android:paddingRight="0.1dp"
                android:paddingStart="0.5dp"
                android:text="@string/cyberlabs"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewEventName"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewClubName"
                android:layout_alignStart="@+id/textViewClubName"
                android:layout_below="@+id/textViewClubName"
                android:padding="0.8dp"
                android:text="@string/android_workshop"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewVenue"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewEventName"
                android:layout_alignStart="@+id/textViewEventName"
                android:layout_below="@+id/textViewEventName"
                android:padding="0.1dp"
                android:text="@string/venue"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewParticipators"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewClubName"
                android:layout_alignStart="@+id/textViewClubName"
                android:layout_below="@+id/textViewDateAndTime"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:padding="0.1dp"
                android:text="@string/everyone"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDateAndTime"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewClubName"
                android:layout_alignStart="@+id/textViewClubName"
                android:layout_below="@+id/textViewVenue"
                android:padding="0.1dp"
                android:text="@string/date_and_time"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="14sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>